--- a/bitwarden_license/bit-web/src/app/admin-console/providers/setup/setup.component.html
+++ b/bitwarden_license/bit-web/src/app/admin-console/providers/setup/setup.component.html
@@ -1,5 +1,7 @@
 <app-navbar></app-navbar>
-<app-payment-method-banners *ngIf="false"></app-payment-method-banners>
+<app-payment-method-warning-banners
+  *ngIf="showPaymentMethodWarningBanners$ | async"
+></app-payment-method-warning-banners>
 <div class="container page-content">
   <div class="page-header">
     <h1>{{ "setupProvider" | i18n }}</h1>
