--- a/apps/web/src/app/vault/individual-vault/vault-onboarding/vault-onboarding.component.html
+++ b/apps/web/src/app/vault/individual-vault/vault-onboarding/vault-onboarding.component.html
@@ -27,7 +27,12 @@
         <button type="button" bitLink (click)="emitToAddCipher()">
           {{ "onboardingImportDataDetailsLink" | i18n }}
         </button>
-        {{ "onboardingImportDataDetailsPartTwo" | i18n }}
+        <span *ngIf="orgs.length === 0">
+          {{ "onboardingImportDataDetailsPartTwoNoOrgs" | i18n }}
+        </span>
+        <span *ngIf="orgs.length > 0">
+          {{ "onboardingImportDataDetailsPartTwoWithOrgs" | i18n }}
+        </span>
       </p>
     </app-onboarding-task>
 
@@ -35,6 +40,7 @@
       [title]="'installBrowserExtension' | i18n"
       icon="bwi-cli"
       (click)="navigateToExtension()"
+      route="[]"
       [completed]="onboardingTasks.installExtension"
     >
       <span class="tw-pl-1">
