--- a/libs/auth/src/angular/anon-layout/anon-layout.component.html
+++ b/libs/auth/src/angular/anon-layout/anon-layout.component.html
@@ -4,7 +4,7 @@
   <div class="tw-text-center">
     <div class="tw-px-8">
       <div *ngIf="icon" class="tw-mb-8">
-        <bit-icon [icon]="iconType"></bit-icon>
+        <bit-icon [icon]="icon"></bit-icon>
       </div>
       <bit-icon [icon]="logo" class="tw-mx-auto tw-block tw-max-w-72 sm:tw-max-w-xs"></bit-icon>
     </div>
