fix styles in badge list

--- a/apps/web/src/app/vault/components/vault-items/vault-collection-row.component.html
+++ b/apps/web/src/app/vault/components/vault-items/vault-collection-row.component.html
@@ -40,7 +40,7 @@
   </app-org-badge>
 </td>
 <td bitCell [ngClass]="RowHeightClass" *ngIf="showCollections"></td>
-<td bitCell [ngClass]="RowHeightClass" *ngIf="showGroups" #badgeContainer>
+<td bitCell [ngClass]="RowHeightClass" *ngIf="showGroups">
   <app-group-badge
     *ngIf="collectionGroups"
     [selectedGroups]="collectionGroups"
