--- a/apps/browser/src/popup/components/private-mode-warning.component.html
+++ b/apps/browser/src/popup/components/private-mode-warning.component.html
@@ -1,6 +1,9 @@
 <app-callout class="app-private-mode-warning" type="warning" *ngIf="showWarning">
   {{ "privateModeWarning" | i18n }}
-  <a href="https://bitwarden.com/help/article/private-mode/" target="_blank" rel="noopener">{{
-    "learnMore" | i18n
-  }}</a>
+  <a
+    href="https://bitwarden.com/help/article/private-mode/"
+    target="_blank"
+    rel="noopener noreferrer"
+    >{{ "learnMore" | i18n }}</a
+  >
 </app-callout>
