--- a/apps/web/src/app/auth/settings/emergency-access/confirm/emergency-access-confirm.component.html
+++ b/apps/web/src/app/auth/settings/emergency-access/confirm/emergency-access-confirm.component.html
@@ -18,7 +18,11 @@
       <div class="modal-body">
         <p>
           {{ "fingerprintEnsureIntegrityVerify" | i18n }}
-          <a href="https://bitwarden.com/help/fingerprint-phrase/" target="_blank" rel="noopener">
+          <a
+            href="https://bitwarden.com/help/fingerprint-phrase/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             {{ "learnMore" | i18n }}</a
           >
         </p>
