--- a/apps/web/src/app/billing/individual/premium.component.html
+++ b/apps/web/src/app/billing/individual/premium.component.html
@@ -56,7 +56,7 @@
     bitButton
     href="{{ this.cloudWebVaultUrl }}/#/settings/subscription/premium"
     target="_blank"
-    rel="noopener"
+    rel="noopener noreferrer"
     buttonType="secondary"
     *ngIf="selfHosted"
   >
