--- a/bitwarden_license/bit-web/src/app/secrets-manager/overview/overview.component.html
+++ b/bitwarden_license/bit-web/src/app/secrets-manager/overview/overview.component.html
@@ -16,7 +16,7 @@
           bitLink
           href="https://bitwarden.com/help/secrets-manager-cli/"
           target="_blank"
-          rel="noopener noreferrer"
+          rel="noreferrer"
           >{{ "smCLI" | i18n }}</a
         >
       </span>
