--- a/apps/web/src/app/admin-console/organizations/manage/user-confirm.component.html
+++ b/apps/web/src/app/admin-console/organizations/manage/user-confirm.component.html
@@ -18,11 +18,7 @@
       <div class="modal-body">
         <p>
           {{ "fingerprintEnsureIntegrityVerify" | i18n }}
-          <a
-            href="https://bitwarden.com/help/fingerprint-phrase/"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
+          <a href="https://bitwarden.com/help/fingerprint-phrase/" target="_blank" rel="noreferrer">
             {{ "learnMore" | i18n }}</a
           >
         </p>
