--- a/apps/web/src/app/admin-console/organizations/members/components/bulk/bulk-confirm.component.html
+++ b/apps/web/src/app/admin-console/organizations/members/components/bulk/bulk-confirm.component.html
@@ -31,7 +31,7 @@
             <a
               href="https://bitwarden.com/help/fingerprint-phrase/"
               target="_blank"
-              rel="noopener noreferrer"
+              rel="noreferrer"
             >
               {{ "learnMore" | i18n }}</a
             >
