--- a/apps/web/src/app/auth/recover-two-factor.component.html
+++ b/apps/web/src/app/auth/recover-two-factor.component.html
@@ -9,7 +9,7 @@
             <a
               href="https://bitwarden.com/help/lost-two-step-device/"
               target="_blank"
-              rel="noopener noreferrer"
+              rel="noreferrer"
               >{{ "learnMore" | i18n }}</a
             >
           </p>
