--- a/apps/web/src/app/layouts/header/web-header.component.html
+++ b/apps/web/src/app/layouts/header/web-header.component.html
@@ -61,12 +61,7 @@
                 <i class="bwi bwi-fw bwi-user" aria-hidden="true"></i>
                 {{ "accountSettings" | i18n }}
               </a>
-              <a
-                bitMenuItem
-                href="https://bitwarden.com/help/"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
+              <a bitMenuItem href="https://bitwarden.com/help/" target="_blank" rel="noreferrer">
                 <i class="bwi bwi-fw bwi-question-circle" aria-hidden="true"></i>
                 {{ "getHelp" | i18n }}
               </a>
@@ -74,7 +69,7 @@
                 bitMenuItem
                 href="https://bitwarden.com/download/"
                 target="_blank"
-                rel="noopener noreferrer"
+                rel="noreferrer"
               >
                 <i class="bwi bwi-fw bwi-download" aria-hidden="true"></i>
                 {{ "getApps" | i18n }}
