--- a/apps/web/src/app/vault/individual-vault/vault.component.html
+++ b/apps/web/src/app/vault/individual-vault/vault.component.html
@@ -101,7 +101,7 @@
             class="btn btn-block btn-outline-secondary"
             target="_blank"
             href="https://browser-update.org/update-browser.html"
-            rel="noopener noreferrer"
+            rel="noreferrer"
           >
             {{ "updateBrowser" | i18n }}
           </a>
