--- a/bitwarden_license/bit-web/src/app/admin-console/policies/activate-autofill.component.html
+++ b/bitwarden_license/bit-web/src/app/admin-console/policies/activate-autofill.component.html
@@ -1,11 +1,8 @@
 <app-callout type="warning">
   {{ "experimentalFeature" | i18n }}
-  <a
-    href="https://bitwarden.com/help/auto-fill-browser/"
-    target="_blank"
-    rel="noopener noreferrer"
-    >{{ "learnMoreAboutAutofill" | i18n }}</a
-  >
+  <a href="https://bitwarden.com/help/auto-fill-browser/" target="_blank" rel="noreferrer">{{
+    "learnMoreAboutAutofill" | i18n
+  }}</a>
 </app-callout>
 
 <div class="form-group">
