--- a/libs/auth/src/angular/fingerprint-dialog/fingerprint-dialog.component.html
+++ b/libs/auth/src/angular/fingerprint-dialog/fingerprint-dialog.component.html
@@ -9,7 +9,7 @@
       bitButton
       href="https://bitwarden.com/help/fingerprint-phrase/"
       target="_blank"
-      rel="noopener noreferrer"
+      rel="noreferrer"
       buttonType="primary"
       bitDialogClose
     >
