Add rel noreferrer

--- a/apps/web/src/app/layouts/header/web-header.component.html
+++ b/apps/web/src/app/layouts/header/web-header.component.html
@@ -9,6 +9,7 @@
     bitLink
     linkType="contrast"
     target="_blank"
+    rel="noreferrer"
     >{{ "releaseBlog" | i18n }}</a
   >
 </bit-banner>
