--- a/apps/browser/src/vault/popup/components/vault/add-edit.component.html
+++ b/apps/browser/src/vault/popup/components/vault/add-edit.component.html
@@ -616,8 +616,7 @@
           class="box-content-row box-content-row-newmulti single-line"
           *ngIf="!(!cipher.edit && editMode)"
         >
-          <i class="bwi bwi-fw bwi-plus-circle bwi-fw bwi-lg" aria-hidden="true"></i>
-          {{ "newUri" | i18n }}
+          <i class="bwi bwi-plus-circle bwi-fw bwi-lg" aria-hidden="true"></i> {{ "newUri" | i18n }}
         </button>
       </div>
     </div>
