--- a/apps/web/src/app/admin-console/organizations/layouts/organization-layout.component.html
+++ b/apps/web/src/app/admin-console/organizations/layouts/organization-layout.component.html
@@ -7,7 +7,7 @@
 
     <bit-nav-item
       icon="bwi-collection"
-      [text]="organization.flexibleCollections ? 'collections' : ('vault' | i18n)"
+      [text]="(organization.flexibleCollections ? 'collections' : 'vault') | i18n"
       route="vault"
       *ngIf="canShowVaultTab(organization)"
     >
