--- a/apps/web/src/app/billing/organizations/subscription/organization-subscription.component.html
+++ b/apps/web/src/app/billing/organizations/subscription/organization-subscription.component.html
@@ -19,3 +19,5 @@
   *ngIf="hasData && !organization.canViewSubscription"
   [providerName]="organization.providerName"
 ></app-org-subscription-hidden>
+<app-organization-subscription-status [subscription]="subscription" plan="REPLACE ME">
+</app-organization-subscription-status>
