Make banner work with new vault navigation

--- a/apps/web/src/app/billing/shared/payment-method-warnings/payment-method-warnings.component.html
+++ b/apps/web/src/app/billing/shared/payment-method-warnings/payment-method-warnings.component.html
@@ -1,5 +1,9 @@
 <ng-container *ngFor="let warning of warnings$ | async">
-  <bit-banner bannerType="warning" (onClose)="closeWarning(warning.organizationId)">
+  <bit-banner
+    class="-tw-m-6 tw-flex tw-flex-col tw-pb-6"
+    bannerType="warning"
+    (onClose)="closeWarning(warning.organizationId)"
+  >
     {{ "maintainYourSubscription" | i18n: warning.organizationName }}
     <a
       bitLink
