--- a/apps/web/src/app/auth/trial-initiation/content/secrets-manager-content.component.html
+++ b/apps/web/src/app/auth/trial-initiation/content/secrets-manager-content.component.html
@@ -1,25 +1,22 @@
 <h1 class="tw-text-4xl !tw-text-alt2">{{ header }}</h1>
 <div class="tw-pt-16">
   <h2 class="tw-text-2xl tw-font-semibold">
-    Secure your business with a simpler, faster way to secure and manage secrets
+    {{ headline }}
   </h2>
 </div>
 <ul class="tw-mt-12 tw-flex tw-flex-col tw-gap-10 tw-text-2xl tw-text-main">
-  <li>Unlimited secrets, users, and projects</li>
-  <li>Simple and transparent pricing</li>
-  <li>End-to-end encryption</li>
+  <li *ngFor="let primaryPoint of primaryPoints">
+    {{ primaryPoint }}
+  </li>
 </ul>
 <div class="tw-mt-12 tw-flex tw-flex-col">
   <div class="tw-rounded-[32px] tw-bg-background">
     <div class="tw-my-8 tw-mx-6">
-      <h2 class="tw-pl-5 tw-font-semibold">Limited time offer</h2>
+      <h2 class="tw-pl-5 tw-font-semibold">{{ calloutHeadline }}</h2>
       <ul class="tw-space-y-4 tw-mt-4 tw-pl-10">
-        <li>
-          Sign up today and receive a complimentary 12-month subscription to Bitwarden Password
-          Manager
+        <li *ngFor="let callout of callouts">
+          {{ callout }}
         </li>
-        <li>Experience complete security across your organization</li>
-        <li>Secure all your sensitive credentials, from passwords to machine secrets</li>
       </ul>
     </div>
   </div>
