Resolve review feedback

--- a/libs/angular/src/auth/components/environment-selector.component.html
+++ b/libs/angular/src/auth/components/environment-selector.component.html
@@ -39,7 +39,7 @@
       role="dialog"
       aria-modal="true"
     >
-      <ng-container *ngFor="let region of AvailableRegions">
+      <ng-container *ngFor="let region of availableRegions">
         <button
           type="button"
           class="environment-selector-dialog-item"
