feat: add view collection clicked flow, refs AC-2086

--- a/apps/web/src/app/vault/org-vault/vault.component.html
+++ b/apps/web/src/app/vault/org-vault/vault.component.html
@@ -99,7 +99,9 @@
       </bit-no-items>
       <collection-access-restricted
         *ngIf="showCollectionAccessRestricted"
-        (editInfoClicked)="editCollection(selectedCollection.node, CollectionDialogTabType.Info)"
+        (viewCollectionClicked)="
+          editCollection(selectedCollection.node, CollectionDialogTabType.Info, true)
+        "
       >
       </collection-access-restricted>
     </ng-container>
