Fix copy misses

--- a/apps/web/src/app/auth/trial-initiation/content/secrets-manager-content.component.html
+++ b/apps/web/src/app/auth/trial-initiation/content/secrets-manager-content.component.html
@@ -23,8 +23,8 @@
 </div>
 <div class="tw-mt-12 tw-flex tw-flex-col tw-items-center tw-gap-5">
   <app-review-blurb
-    header="Businesses trust Bitwarden to secure their secrets"
+    header="Businesses trust Bitwarden to secure their infrastructure"
     quote="At this point, it would be almost impossible to leak our secrets. It's just one less thing we have to worry about."
-    source="Head of IT, Titanom Technologies"
+    source="Titanom Technologies"
   ></app-review-blurb>
 </div>
