Implement Drag & Drop to Folders Increased Item Click Area Fixed selection of "All Items" when application is initialized

--- a/apps/desktop/src/scss/left-nav.scss
+++ b/apps/desktop/src/scss/left-nav.scss
@@ -116,6 +116,10 @@
           color: themed("primaryColor");
           font-weight: bold;
         }
+        // To prevent dragleave event for children elements
+        * {
+          pointer-events: none;
+        }
       }
 
       .edit-button {
