--- a/apps/desktop/src/vault/app/vault/vault.component.html
+++ b/apps/desktop/src/vault/app/vault/vault.component.html
@@ -59,6 +59,7 @@
       (onFilterChange)="applyVaultFilter($event)"
       (onAddFolder)="addFolder()"
       (onEditFolder)="editFolder($event.id)"
+      (onMoveCipher)="onMoveCipher()"
     ></app-vault-filter>
     <app-nav class="nav"></app-nav>
   </div>
