--- a/apps/desktop/src/vault/app/vault/vault-filter/vault-filter.component.html
+++ b/apps/desktop/src/vault/app/vault/vault-filter/vault-filter.component.html
@@ -37,6 +37,7 @@
     (onFilterChange)="applyFilter($event)"
     (onAddFolder)="addFolder()"
     (onEditFolder)="editFolder($event)"
+    (onMoveCipher)="moveCipher()"
   ></app-folder-filter>
   <app-collection-filter
     class="filter"
