--- a/apps/web/src/app/admin-console/organizations/shared/components/access-selector/access-selector.component.html
+++ b/apps/web/src/app/admin-console/organizations/shared/components/access-selector/access-selector.component.html
@@ -22,7 +22,7 @@
     </select>
   </bit-form-field>
 
-  <bit-form-field class="tw-grow">
+  <bit-form-field class="tw-grow" *ngIf="!hideMultiSelect">
     <bit-label>{{ selectorLabelText }}</bit-label>
     <bit-multi-select
       class="tw-w-full"
