--- a/apps/web/src/app/vault/components/collection-dialog/collection-dialog.component.html
+++ b/apps/web/src/app/vault/components/collection-dialog/collection-dialog.component.html
@@ -65,17 +65,22 @@
         </bit-tab>
         <bit-tab label="{{ 'access' | i18n }}">
           <div class="tw-mb-3" *ngIf="organization.flexibleCollections">
-            <span *ngIf="organization.useGroups">{{ "grantCollectionAccess" | i18n }}</span>
-            <span *ngIf="!organization.useGroups">{{
-              "grantCollectionAccessMembersOnly" | i18n
-            }}</span>
-            <span
-              *ngIf="
-                (flexibleCollectionsV1Enabled$ | async) &&
-                organization.allowAdminAccessToAllCollectionItems
-              "
-              >{{ " " + ("adminCollectionAccess" | i18n) }}</span
-            >
+            <ng-container *ngIf="readonly">
+              <span>{{ "readOnlyCollectionAccess" | i18n }}</span>
+            </ng-container>
+            <ng-container *ngIf="!readonly">
+              <span *ngIf="organization.useGroups">{{ "grantCollectionAccess" | i18n }}</span>
+              <span *ngIf="!organization.useGroups">{{
+                "grantCollectionAccessMembersOnly" | i18n
+              }}</span>
+              <span
+                *ngIf="
+                  (flexibleCollectionsV1Enabled$ | async) &&
+                  organization.allowAdminAccessToAllCollectionItems
+                "
+                >{{ " " + ("adminCollectionAccess" | i18n) }}</span
+              >
+            </ng-container>
           </div>
           <div
             class="tw-mb-3 tw-text-danger"
@@ -85,7 +90,7 @@
           </div>
           <bit-access-selector
             *ngIf="organization.useGroups"
-            [permissionMode]="PermissionMode.Edit"
+            [permissionMode]="readonly ? PermissionMode.Readonly : PermissionMode.Edit"
             formControlName="access"
             [items]="accessItems"
             [columnHeader]="'groupSlashMemberColumnHeader' | i18n"
@@ -93,22 +98,30 @@
             [selectorHelpText]="'userPermissionOverrideHelper' | i18n"
             [emptySelectionText]="'noMembersOrGroupsAdded' | i18n"
             [flexibleCollectionsEnabled]="organization.flexibleCollections"
+            [disabled]="readonly"
           ></bit-access-selector>
           <bit-access-selector
             *ngIf="!organization.useGroups"
-            [permissionMode]="PermissionMode.Edit"
+            [permissionMode]="readonly ? PermissionMode.Readonly : PermissionMode.Edit"
             formControlName="access"
             [items]="accessItems"
             [columnHeader]="'memberColumnHeader' | i18n"
             [selectorLabelText]="'selectMembers' | i18n"
             [emptySelectionText]="'noMembersAdded' | i18n"
             [flexibleCollectionsEnabled]="organization.flexibleCollections"
+            [disabled]="readonly"
           ></bit-access-selector>
         </bit-tab>
       </bit-tab-group>
     </div>
     <ng-container bitDialogFooter>
-      <button type="submit" bitButton bitFormButton buttonType="primary" [disabled]="loading">
+      <button
+        type="submit"
+        bitButton
+        bitFormButton
+        buttonType="primary"
+        [disabled]="loading || readonly"
+      >
         {{ "save" | i18n }}
       </button>
       <button
