--- a/apps/desktop/src/vault/app/vault/vault-items.component.html
+++ b/apps/desktop/src/vault/app/vault/vault-items.component.html
@@ -25,7 +25,7 @@
           <div
             class="flex-cipher-list-item tw-w-full"
             draggable="true"
-            (dragstart)="setCipherIdOnDrag($event, c.id)"
+            (dragstart)="setCipherOnDrag($event, c)"
           >
             <span class="text">
               <span class="truncate-box">
