--- a/apps/web/src/app/auth/login/login.component.html
+++ b/apps/web/src/app/auth/login/login.component.html
@@ -91,7 +91,7 @@
               class="-tw-mt-2"
               routerLink="/hint"
               (mousedown)="goToHint()"
-              (click)="setFormValues()"
+              (click)="setLoginEmailValues()"
               >{{ "getMasterPasswordHint" | i18n }}</a
             >
           </div>
