[PM-6934] Updated warning message for two step login policy

--- a/apps/web/src/app/admin-console/organizations/policies/two-factor-authentication.component.html
+++ b/apps/web/src/app/admin-console/organizations/policies/two-factor-authentication.component.html
@@ -1,5 +1,5 @@
 <app-callout type="warning">
-  {{ "twoStepLoginPolicyWarning" | i18n }}
+  {{ "twoStepLoginPolicyWarn" | i18n }}
 </app-callout>
 
 <div class="form-group">
