refactor to remove setStoredEmail() method

--- a/apps/web/src/app/auth/login/login.component.html
+++ b/apps/web/src/app/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <form
   #form
-  (ngSubmit)="submit()"
+  (ngSubmit)="submit(false)"
   [appApiAction]="formPromise"
   class="tw-container tw-mx-auto"
   [formGroup]="formGroup"
