--- a/apps/web/src/app/vault/components/collection-dialog/collection-dialog.component.html
+++ b/apps/web/src/app/vault/components/collection-dialog/collection-dialog.component.html
@@ -65,10 +65,10 @@
         </bit-tab>
         <bit-tab label="{{ 'access' | i18n }}">
           <div class="tw-mb-3" *ngIf="organization.flexibleCollections">
-            <ng-container *ngIf="readonly">
+            <ng-container *ngIf="dialogReadonly">
               <span>{{ "readOnlyCollectionAccess" | i18n }}</span>
             </ng-container>
-            <ng-container *ngIf="!readonly">
+            <ng-container *ngIf="!dialogReadonly">
               <span *ngIf="organization.useGroups">{{ "grantCollectionAccess" | i18n }}</span>
               <span *ngIf="!organization.useGroups">{{
                 "grantCollectionAccessMembersOnly" | i18n
@@ -90,7 +90,7 @@
           </div>
           <bit-access-selector
             *ngIf="organization.useGroups"
-            [permissionMode]="readonly ? PermissionMode.Readonly : PermissionMode.Edit"
+            [permissionMode]="dialogReadonly ? PermissionMode.Readonly : PermissionMode.Edit"
             formControlName="access"
             [items]="accessItems"
             [columnHeader]="'groupSlashMemberColumnHeader' | i18n"
@@ -98,18 +98,16 @@
             [selectorHelpText]="'userPermissionOverrideHelper' | i18n"
             [emptySelectionText]="'noMembersOrGroupsAdded' | i18n"
             [flexibleCollectionsEnabled]="organization.flexibleCollections"
-            [disabled]="readonly"
           ></bit-access-selector>
           <bit-access-selector
             *ngIf="!organization.useGroups"
-            [permissionMode]="readonly ? PermissionMode.Readonly : PermissionMode.Edit"
+            [permissionMode]="dialogReadonly ? PermissionMode.Readonly : PermissionMode.Edit"
             formControlName="access"
             [items]="accessItems"
             [columnHeader]="'memberColumnHeader' | i18n"
             [selectorLabelText]="'selectMembers' | i18n"
             [emptySelectionText]="'noMembersAdded' | i18n"
             [flexibleCollectionsEnabled]="organization.flexibleCollections"
-            [disabled]="readonly"
           ></bit-access-selector>
         </bit-tab>
       </bit-tab-group>
@@ -120,7 +118,7 @@
         bitButton
         bitFormButton
         buttonType="primary"
-        [disabled]="loading || readonly"
+        [disabled]="loading || dialogReadonly"
       >
         {{ "save" | i18n }}
       </button>
