--- a/bitwarden_license/bit-web/src/app/secrets-manager/service-accounts/service-accounts-list.component.html
+++ b/bitwarden_license/bit-web/src/app/secrets-manager/service-accounts/service-accounts-list.component.html
@@ -3,8 +3,8 @@
 </div>
 
 <bit-no-items *ngIf="serviceAccounts?.length == 0">
-  <ng-container slot="title">{{ "serviceAccountsNoItemsTitle" | i18n }}</ng-container>
-  <ng-container slot="description">{{ "serviceAccountsNoItemsMessage" | i18n }}</ng-container>
+  <ng-container slot="title">{{ "machineAccountsNoItemsTitle" | i18n }}</ng-container>
+  <ng-container slot="description">{{ "machineAccountsNoItemsMessage" | i18n }}</ng-container>
   <button
     slot="button"
     type="button"
@@ -101,7 +101,7 @@
   <button type="button" bitMenuItem (click)="bulkDeleteServiceAccounts()">
     <i class="bwi bwi-fw bwi-trash tw-text-danger" aria-hidden="true"></i>
     <span class="tw-text-danger">
-      {{ "deleteServiceAccounts" | i18n }}
+      {{ "deleteMachineAccounts" | i18n }}
     </span>
   </button>
 </bit-menu>
