--- a/bitwarden_license/bit-web/src/app/secrets-manager/service-accounts/service-accounts-list.component.html
+++ b/bitwarden_license/bit-web/src/app/secrets-manager/service-accounts/service-accounts-list.component.html
@@ -13,7 +13,7 @@
     (click)="newServiceAccountEvent.emit()"
   >
     <i class="bwi bwi-plus" aria-hidden="true"></i>
-    {{ "newServiceAccount" | i18n }}
+    {{ "newMachineAccount" | i18n }}
   </button>
 </bit-no-items>
 
@@ -80,16 +80,16 @@
       <bit-menu #serviceAccountMenu>
         <a type="button" bitMenuItem [routerLink]="serviceAccount.id">
           <i class="bwi bwi-fw bwi-eye" aria-hidden="true"></i>
-          {{ "viewServiceAccount" | i18n }}
+          {{ "viewMachineAccount" | i18n }}
         </a>
         <button type="button" bitMenuItem (click)="editServiceAccountEvent.emit(serviceAccount.id)">
           <i class="bwi bwi-fw bwi-pencil" aria-hidden="true"></i>
-          {{ "editServiceAccount" | i18n }}
+          {{ "editMachineAccount" | i18n }}
         </button>
         <button type="button" bitMenuItem (click)="delete(serviceAccount)">
           <i class="bwi bwi-fw bwi-trash tw-text-danger" aria-hidden="true"></i>
           <span class="tw-text-danger">
-            {{ "deleteServiceAccount" | i18n }}
+            {{ "deleteMachineAccount" | i18n }}
           </span>
         </button>
       </bit-menu>
